[package]

name = "logdrop"
version = "0.0.1"
authors = ["Evgeny Safronov <division494@gmail.com>"]

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.bigbrother]
git = "https://github.com/3hren/bigbrother.git"
